--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "jenkins-bot",
   "version": "1.0.0",
-  "description": "A bot to integrate with the Jenkins API to deliver test results and start builds from discord",
+  "description": "",
   "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "commandkit dev",
+    "build": "commandkit build",
+    "start": "commandkit start"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
   },
   "homepage": "https://github.com/FouL06/Jenkins-Bot#readme",
   "dependencies": {
+    "commandkit": "^0.1.10",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5"
   }
